# SC3040

./: .gitignore  README.md
app/backend/: Makefile  README.md  mock_data.py  pyproject.toml  requirements-runtime.txt
app/backend/app/: __init__.py  api.py  config.py  exception_handlers.py  exceptions.py  main.py  middleware.py
app/backend/app/auth/: dependency.py  exceptions.py  models.py  protocols.py  repository.py  schemas.py  service.py  views.py
app/backend/app/billing/: models.py
app/backend/app/booking/: models.py  protocols.py  repository.py  schemas.py  service.py  views.py
app/backend/app/location/: dependency.py  models.py  protocols.py  repository.py  service.py
app/backend/app/onboarding/: service.py
app/backend/app/pet/: dependency.py  models.py  protocols.py  repository.py  schemas.py  service.py
app/backend/app/petcaretaker/: exceptions.py  models.py  protocols.py  repository.py  schemas.py  service.py
app/backend/app/petowner/: models.py  protocols.py  repository.py  schemas.py  service.py
app/backend/app/profile/: enums.py  exceptions.py  models.py  protocols.py  repository.py  schemas.py  service.py  views.py
app/backend/app/review/: models.py
app/backend/app/service/: dependency.py  exceptions.py  models.py  protocols.py  repository.py  schemas.py  service.py  views.py
app/backend/app/util/: cookies.py
app/backend/tests/auth/: test_auth_service.py
app/backend/tests/onboarding/: test_onboarding_service.py
app/backend/tests/pet/: test_pet_service.py
app/backend/tests/petowner/: test_petowner_service.py
(+58 files in other folders)
